--- a/site-react/assets/css/style.css
+++ b/site-react/assets/css/style.css
@@ -2,7 +2,8 @@
 /* saol */
 @font-face {
   font-family: 'saol';
-  src: url(https://cdn.jsdelivr.net/gh/webfontworld/saol/saol.woff2) format("woff2");
+  src: url(../fonts/saol.woff2) format("woff2");
+  src: url(../fonts/saol.woff) format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -577,6 +578,11 @@
   font-style: normal;
 }
 
+:root {
+  font-size: 16px;
+  line-height: 1.4;
+}
+
 *,
 *:before,
 *:after {
@@ -626,8 +632,6 @@ input,
 select,
 table,
 textarea {
-  font-size: 16px;
-  line-height: 1.4;
   color: #222;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -906,4 +910,338 @@ table {
 
 .pb200 {
   padding-top: 200px;
+}
+
+#header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  background: black;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-family: "Rajdhani";
+  border-bottom: 1px solid #2e2e30;
+  border-top: 1px solid #2e2e30;
+  z-index: 1000;
+}
+
+#header .header__port {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
+}
+
+#header .header__port a {
+  display: inline-block;
+  padding: 7px;
+  margin: 10px;
+}
+
+#header .header__logo {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 20%;
+          flex: 0 0 20%;
+  text-align: center;
+}
+
+#header .header__logo a {
+  font-size: 30px;
+  font-family: "Playfair Display";
+  font-weight: bold;
+  padding: 7px 7px 9px;
+  margin: 10px;
+  display: block;
+}
+
+#header .header__menu {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
+  text-align: right;
+}
+
+#header .header__menu ul {
+  margin-right: 10px;
+}
+
+#header .header__menu ul li {
+  display: inline;
+}
+
+#header .header__menu ul li a {
+  display: inline-block;
+  padding: 5px;
+  margin: 1px;
+}
+
+#header .header__ham {
+  position: absolute;
+  left: 14px;
+  top: 18px;
+  width: 40px;
+  height: 40px;
+  display: none;
+}
+
+#header .header__ham:before {
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  width: 10px;
+  height: 10px;
+  background: #fff;
+  -webkit-box-shadow: 0 14px 0 #fff;
+          box-shadow: 0 14px 0 #fff;
+}
+
+#header .header__ham:after {
+  content: '';
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
+  width: 10px;
+  height: 10px;
+  background: #fff;
+  -webkit-box-shadow: 0 -14px 0 #fff;
+          box-shadow: 0 -14px 0 #fff;
+}
+
+@media (max-width: 1100px) {
+  #header .header__menu {
+    display: none;
+  }
+  #header .header__port {
+    display: none;
+  }
+  #header .header__logo {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
+  #header .header__ham {
+    display: block;
+  }
+}
+
+@media (max-width: 800px) {
+  #header .header__logo a {
+    font-size: 22px;
+  }
+  #header .header__ham {
+    top: 12px;
+    left: 10px;
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+}
+
+#footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: black;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-family: "Rajdhani";
+  border-top: 1px solid #2e2e30;
+}
+
+#footer div {
+  padding: 22px;
+  text-align: center;
+}
+
+#footer div h4 {
+  font-weight: 500;
+  text-transform: capitalize;
+  padding: 6px;
+}
+
+#footer div h4, #footer div p, #footer div ul {
+  display: inline-block;
+}
+
+#footer div h4 li, #footer div p li, #footer div ul li {
+  display: inline;
+}
+
+#footer div h4 li a, #footer div p li a, #footer div ul li a {
+  display: inline-block;
+  padding: 4px;
+}
+
+#footer div:nth-child(1) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 25%;
+          flex: 0 0 25%;
+}
+
+#footer div:nth-child(2) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 25%;
+          flex: 0 0 25%;
+  border-left: 1px solid #2e2e30;
+  border-right: 1px solid #2e2e30;
+}
+
+#footer div:nth-child(3) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+}
+
+@media (max-width: 1100px) {
+  #footer div:nth-child(1) {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
+  #footer div:nth-child(2) {
+    display: none;
+  }
+  #footer div:nth-child(3) {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  #footer div {
+    padding: 14px;
+  }
+}
+
+body {
+  cursor: none;
+}
+
+.cursor {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #791313;
+  border-radius: 50%;
+  z-index: 10000;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  pointer-events: none;
+}
+
+#mainCont {
+  background-color: #000;
+  height: 100vh;
+  color: #fff;
+  font-family: "saol";
+  font-size: 9vw;
+  line-height: .91;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#mainCont br {
+  display: none;
+}
+
+#mainCont2 {
+  width: 100%;
+  background-color: #000;
+  height: 100vh;
+  font-size: 9vw;
+  line-height: 1.2;
+  color: #000;
+  position: relative;
+  z-index: -2;
+  font-family: "Sanchez Condensed";
+  font-weight: 400;
+  font-style: italic;
+  overflow: hidden;
+}
+
+#mainCont2 .textWrap {
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+#mainCont2 .textWrap .line {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#mainCont2 .textWrap .line .left {
+  width: 50vw;
+  color: #fff;
+}
+
+#mainCont2 .textWrap .line .left .spanWrap {
+  width: 100vw;
+  text-align: center;
+}
+
+#mainCont2 .textWrap .line .left .spanWrap span {
+  display: inline-block;
+}
+
+#mainCont2 .textWrap .line .right {
+  width: 50vw;
+  overflow: hidden;
+}
+
+#mainCont2 .textWrap .line .right .spanWrap {
+  width: 100vw;
+  text-align: center;
+  -webkit-transform: translateX(-50vw);
+          transform: translateX(-50vw);
+}
+
+#mainCont2 .textWrap .line .right .spanWrap span {
+  display: inline-block;
+}
+
+#mainCont2 .imgWrap {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(1%, -50%);
+          transform: translate(1%, -50%);
+  width: 50%;
+  z-index: -1;
+}
+
+#mainCont2 .imgWrap img {
+  width: 51%;
+  height: 100%;
 }
