--- a/site-react/assets/scss/_fonts.scss
+++ b/site-react/assets/scss/_fonts.scss
@@ -1,7 +1,8 @@
 /* saol */
 @font-face {
     font-family: 'saol';
-    src: url(https://cdn.jsdelivr.net/gh/webfontworld/saol/saol.woff2) format('woff2');
+    src: url(../fonts/saol.woff2) format('woff2'),;
+    src: url(../fonts/saol.woff) format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
