--- a/joodo/assets/css/main.css
+++ b/joodo/assets/css/main.css
@@ -100,6 +100,9 @@
     position: absolute;
     left: 0; top: 0;
 }
+.cont4, .cont2, .cont3 {
+    opacity: 0;
+}
 .section .sectionImg {
     flex: 0 0 50%;
 }
