--- a/site-react/assets/scss/_pages.scss
+++ b/site-react/assets/scss/_pages.scss
@@ -4,10 +4,6 @@
 // #youtubeCont
 // #scriptCont
 // #portCont
-body {
-    
-    cursor: none;
-}
 
 .cursor {
     position: absolute;
@@ -101,6 +97,215 @@ body {
         img {
             width: 51%;
             height: 100%;
+        }
+    }
+}
+
+//aboutCont
+#aboutCont {
+    padding-top: 68px;
+    font-family: $font-main;
+
+    .container {
+        max-width: 1273px;
+        margin: 0 auto;
+        
+        .row {
+
+            #section {
+                width: 100%;
+    
+                h2 {
+                    font-size: 12vw;
+                    margin-top: 174px;
+                    line-height: .9;
+                }
+    
+                .cont1__box {
+                    margin-top: 270px;
+    
+                    .imgbox {
+                        width: 100%;
+    
+                        img {
+                            width: 100%;
+                        }
+                    }
+    
+                    .textbox {
+                        margin-top: 62px;
+                        font-size: 1.11vw;
+                        font-family: $font-kor1;
+                        width: 70%;
+                        
+                        .desc1 {
+                            margin-bottom: 30px;
+                        }
+    
+                        .desc2 {
+                            line-height: 1.6;
+                        }
+                    }
+                }
+    
+                .cont2__box {
+                    padding-top: 314px;
+                    display: flex;
+                    justify-content: space-between;
+    
+                    .imgbox {
+                        flex: 0 0 60%;
+    
+                        img {
+                            width: 100%;
+                        }
+                    }
+    
+                    .textbox {
+                        flex: 0 0 36%;
+                        font-size: 1.11vw;
+                        font-family: $font-kor1;
+                        
+                        .desc1 {
+                            margin-bottom: 30px;
+                        }
+    
+                        .desc2 {
+                            line-height: 1.6;
+                        }
+                    }
+                }
+    
+                .cont3__box {
+                    padding-top: 372px;
+                    display: flex;
+                    justify-content: space-between;
+                    padding-bottom: 496px;
+    
+                    .imgbox {
+                        flex: 0 0 60%;
+    
+                        img {
+                            width: 100%;
+                        }
+                    }
+    
+                    .textbox {
+                        flex: 0 0 36%;
+                        font-size: 1.11vw;
+                        font-family: $font-kor1;
+                        
+                        .desc1 {
+                            margin-bottom: 30px;
+                        }
+    
+                        .desc2 {
+                            line-height: 1.6;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    // #footer {
+    //     width: 100%;
+    //     height: 100vh;
+    //     background: #000;
+    //     position: relative;
+
+    //     .footer {
+    //         position: absolute;
+    //         left: 50%; top: 50%;
+    //         transform: translate(-50%, -50%);
+    //         color: #fff;
+    //         width: 100%;
+
+    //         p {
+    //             font-size: 1vw;
+    //         }
+    //         h2 {
+    //             font-size: 8.6vw;
+    //             font-family: $font-main;
+    //             line-height: 132px;
+    //             margin: 72px 0;
+    //         }
+    //         span {
+    //             display: inline-block;
+
+    //             a {
+    //                 display: inline-block;
+    //                 font-size: 1.1vw;
+    //                 border: 1px solid #fff;
+    //                 padding: 10px 30px;
+    //                 border-radius: 50px;
+    //             }
+    //         }
+    //     }
+    // }
+}
+@media (max-width: 1100px){
+    #aboutCont {
+        .container {
+            .row {
+                padding: 0 20px;
+                margin: 0 auto;
+                #section {
+                    .cont1__box {
+                        .textbox {
+                            font-size: 2vw;
+                            width: 100%;
+                        }
+                    }
+                    .cont2__box {
+                        display: block;
+    
+                        .textbox {
+                            margin-top: 62px;
+                            font-size: 2vw;
+                        }
+                    }
+                    .cont3__box {
+                        display: flex;
+                        flex-direction: column-reverse;
+                        padding-bottom: 150px;
+    
+                        .textbox {
+                            margin-top: 62px;
+                            font-size: 2vw;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media (max-width: 800px){
+    #aboutCont {
+        .container {
+            .row {
+                padding: 0 20px;
+                margin: 0 auto;
+                #section {
+                    h2 {
+                        margin-top: 100px;
+                        text-align: center;
+
+                        br {
+                            display: none;
+                        }
+                    }
+                    .cont1__box {
+                        margin-top: 150px;
+                    }
+                    .cont2__box {
+                        padding-top: 150px;
+                    }
+                    .cont3__box {
+                        padding-top: 150px;
+                    }
+                }
+            }
         }
     }
 }
