--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -221,6 +221,8 @@ a {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  z-index: 0;
+  overflow: hidden;
 }
 
 .bg::before {
