--- a/vefy/assets/css/board.css
+++ b/vefy/assets/css/board.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100% !important;
+}
+
 /* skip */
 #skip {
     position: relative;
@@ -43,41 +47,19 @@
     margin-top: 30px;
     overflow: hidden;
 }
-.board-search {
+.commu-wrap {
     position: relative;
 }
-.board-search .search-field {
-    margin-bottom: 20px;
-    overflow: hidden;
+.search_box {
+    text-align: right;
+    margin-bottom: 40px;
 }
-.search-field .p_box {
-    float: left;
-}
-.search-field .search_box {
-    float: right;
-}
-.board-search .search-field .p_box p {
-    display: inline-block;
-}
-.board-search .search-field .p_box p a {
-    display: inline-block;
-    margin-top: 83px;
-    font-size: 26px;
-    padding: 0 10px 0 10px;
-    margin: 0 5px 0 5px;
-    font-weight: 600;
-    color: #c5c5c5;
-}
-.board-search .search-field .p_box p.choice a {
-    border-bottom: 2px solid #C9D5CA;
-    color: #000;
-}
-.board-search .form-search {
+.commu-wrap .form-search {
     border: 1px solid #c5c5c5;
     border-radius: 5px;
     padding: 10px 15px;
 }
-.board-search .form-btn {
+.commu-wrap .form-btn {
     border: 1px solid #C9D5CA;
     background-color: #C9D5CA;
     border-radius: 5px;
@@ -124,13 +106,13 @@
 .wirte-btn {
     width: 100%;
     overflow: hidden;
+    margin-top: 20px;
 }
 .wirte-btn .form-btn.black {
     float: right;
     font-size: 18px;
     font-weight: bold;
     padding: 10px 20px;
-    margin-right: 10%;
     border-radius: 5px;
     text-align: center;
     border: 1px solid #f3e6d6;
@@ -254,7 +236,7 @@
     align-items: center;
     justify-content: space-between;
 }
-.board .search_btn {
+.commu-wrap .search_btn {
     border: 0;
     background: #C9D5CA;
     padding: 8px 10px;
@@ -449,7 +431,7 @@
 }
 .bgBox {
     width: 50vw;
-    height: 45vh;
+    height: 40vh;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -581,7 +563,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    display: -webkit-box;
+    /* display: -webkit-box; */
     -webkit-line-clamp: 2; 
     -webkit-box-orient: vertical;
 }
@@ -593,15 +575,9 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    display: -webkit-box;
+    /* display: -webkit-box; */
     -webkit-line-clamp: 2; 
     -webkit-box-orient: vertical;
-}
-.cm_box p {
-    color: #555;
-    line-height: 1.9;
-    letter-spacing: 0.5px;
-    font-size: 16px;
 }
 .cm_boxr p {
     color: #555;
@@ -609,30 +585,41 @@
     letter-spacing: 0.5px;
     font-size: 16px;
 }
-
+.cm_box p:nth-child(2) {
+    display: inline-block;
+    margin-top: 10px;
+}
 .cm_box button {
-    margin-top: 15px;
-    padding: 6px 20px;
+    margin-top: 20px;
+    padding: 10px 20px 7px 20px;
     background: #f3e6d6;
-    font-size: 1.2vw;
+    font-size: 16px;
+    border-radius: 30px;
+}
+.cm_boxr button {
+    margin-top: 20px;
+    padding: 10px 20px 7px 20px;
+    background: #f3e6d6;
+    font-size: 16px;
+    border-radius: 30px;
+}
+.cm_box .viewNum {
+    display: inline-block;
+    margin-top: 10px;
 }
 .cm_box .cm_view {
     display: block;
     text-align: center;
-    margin-top: 25px;
-    font-size: 15px;
-}
-.cm_boxr button {
     margin-top: 15px;
-    padding: 8px 20px 6px 20px;
-    background: #f3e6d6;
-    font-size: 16px;
+    font-size: 15px;
+    font-family: 'Noto Sans KR';
 }
 .cm_boxr .cm_view {
     display: block;
     text-align: center;
     margin-top: 25px;
     font-size: 15px;
+    font-family: 'Noto Sans KR';
 }
 .cm_box.recipe button {
     background: #e6ebe6;
@@ -675,4 +662,89 @@
 .pageList.recipe ul li.active a {
     background: #e6ebe6;
     color: #282828;
+}
+
+/* 댓글 */
+.reply_view {
+    width: 900px;
+    margin-top: 100px;
+    word-break: break-all;
+}
+
+.dap_lo {
+    font-size: 14px;
+    padding: 10px 0 15px 0;
+    border-bottom: solid 1px gray;
+}
+
+.dap_to {
+    margin-top: 5px;
+}
+
+.rep_me {
+    font-size: 12px;
+}
+
+.rep_me ul li {
+    float: left;
+    width: 30px;
+}
+
+.dat_delete {
+    display: none;
+}
+
+.dat_edit {
+    display: none;
+}
+
+.dap_sm {
+    position: absolute;
+    top: 10px;
+}
+
+.dap_edit_t {
+    width: 520px;
+    height: 70px;
+    position: absolute;
+    top: 40px;
+}
+
+.re_mo_bt {
+    position: absolute;
+    top: 40px;
+    right: 5px;
+    width: 90px;
+    height: 72px;
+}
+
+#re_content {
+    width: 700px;
+    height: 56px;
+}
+
+.dap_ins {
+    margin-top: 50px;
+}
+
+.re_bt {
+    position: absolute;
+    width: 100px;
+    height: 56px;
+    font-size: 16px;
+    margin-left: 10px;
+}
+
+#foot_box {
+    height: 50px;
+}
+.search_h3 {
+    font-size: 55px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #c77f5d;
+    font-weight: 300;
+}
+.keyword {
+    height: 50px;
 }
