--- a/vefy/assets/css/dog.css
+++ b/vefy/assets/css/dog.css
@@ -1,25 +1,28 @@
-/* dog */
-.member-form .card {
+.card {
     position: relative;
     width: 360px;
-    margin: 50px auto;
+    margin: 20px auto;
 }
-.member-form .dog .head,
-.member-form .dog .body {
+.dog .head,
+.dog .body {
     position: relative;
     width: 115px;
 }
-.member-form .dog .head {
+
+.dog .head {
     height: 115px;
     border-radius: 50% 50% 0 0;
     margin: 0 auto;
 }
-.member-form .dog .ears {
+
+.dog .ears {
     position: relative;
     top: -14%;
     width: 100%;
 }
-.member-form .dog .ears::before, .dog .ears::after {
+
+.dog .ears::before,
+.dog .ears::after {
     content: "";
     position: absolute;
     top: 0;
@@ -30,34 +33,41 @@
     border-left: 7px solid #F7AA2B;
     border-right: 7px solid #F7AA2B;
 }
-.member-form .dog .ears::before {
+
+.dog .ears::before {
     left: 0;
     border-radius: 50% 45% 0 0;
 }
-.member-form .dog .ears::after {
+
+.dog .ears::after {
     right: 0;
     border-radius: 45% 50% 0 0;
 }
-.member-form .dog .face {
+
+.dog .face {
     position: absolute;
     background: #F7AA2B;
     width: 100%;
     height: 100%;
     border-radius: 50% 50% 0 0;
 }
-.member-form .dog .face::before, .dog .face::after {
+
+.dog .face::before,
+.dog .face::after {
     content: "";
     display: block;
     margin: auto;
     background: #FEFEFE;
 }
-.member-form .dog .face::before {
+
+.dog .face::before {
     width: 15px;
     height: 35px;
     margin-top: 24px;
     border-radius: 20px 20px 0 0;
 }
-.member-form .dog .face::after {
+
+.dog .face::after {
     position: absolute;
     bottom: -1px;
     left: 0;
@@ -66,12 +76,15 @@
     height: 65px;
     border-radius: 45% 45% 0 0;
 }
-.member-form .dog .eyes {
+
+.dog .eyes {
     position: relative;
     top: 29%;
     text-align: center;
 }
-.member-form .dog .eyes::before, .dog .eyes::after {
+
+.dog .eyes::before,
+.dog .eyes::after {
     content: "";
     display: inline-block;
     width: 12px;
@@ -80,7 +93,8 @@
     background: #451d1c;
     margin: 0 14.5%;
 }
-.member-form .dog .teardrop {
+
+.dog .teardrop {
     position: absolute;
     top: 125%;
     left: 19%;
@@ -91,7 +105,8 @@
     background: #FEFEFE;
     visibility: hidden;
 }
-.member-form .dog .nose {
+
+.dog .nose {
     position: relative;
     top: 35%;
     width: 16px;
@@ -100,7 +115,8 @@
     background: #451d1c;
     margin: auto;
 }
-.member-form .dog .mouth {
+
+.dog .mouth {
     position: relative;
     top: 34.5%;
     width: 4px;
@@ -109,7 +125,9 @@
     text-align: center;
     background: #451d1c;
 }
-.member-form .dog .mouth::before, .dog .mouth::after {
+
+.dog .mouth::before,
+.dog .mouth::after {
     content: "";
     position: absolute;
     top: -4px;
@@ -121,21 +139,27 @@
     border-top-color: transparent;
     z-index: 2;
 }
-.member-form .dog .mouth::before {
+
+.dog .mouth::before {
     transform: translateX(-89%) rotate(45deg);
 }
-.member-form .dog .mouth::after {
+
+.dog .mouth::after {
     transform: translateX(-2px) rotate(45deg);
 }
-.member-form .dog .tongue {
+
+.dog .tongue {
     position: relative;
     z-index: 1;
 }
-.member-form .dog .tongue::before, .dog .tongue::after {
+
+.dog .tongue::before,
+.dog .tongue::after {
     content: "";
     position: absolute;
 }
-.member-form .dog .tongue::before {
+
+.dog .tongue::before {
     top: 10px;
     left: -7px;
     width: 18px;
@@ -144,7 +168,8 @@
     background: #451d1c;
     z-index: -1;
 }
-.member-form .dog .tongue::after {
+
+.dog .tongue::after {
     top: 14px;
     left: -4px;
     width: 12px;
@@ -153,7 +178,8 @@
     background: #F5534F;
     z-index: 5;
 }
-.member-form .dog .chin {
+
+.dog .chin {
     position: relative;
     top: 47.5%;
     margin: 0 auto;
@@ -165,13 +191,16 @@
     border-radius: 2px;
     z-index: 0;
 }
-.member-form .dog .body {
+
+.dog .body {
     position: relative;
     height: 139px;
     margin: auto;
     z-index: 0;
 }
-.member-form .dog .body::before, .dog .body::after {
+
+.dog .body::before,
+.dog .body::after {
     content: "";
     position: absolute;
     top: -1px;
@@ -183,13 +212,15 @@
     margin: auto;
     background: #F7AA2B;
 }
-.member-form .dog .body::after {
+
+.dog .body::after {
     top: -2px;
     bottom: -1px;
     width: 60px;
     background: #FEFEFE;
 }
-.member-form .dog .tail {
+
+.dog .tail {
     position: absolute;
     left: -60%;
     bottom: 1px;
@@ -201,7 +232,8 @@
     border-radius: 25px 0 0 25px;
     z-index: -2;
 }
-.member-form .dog .legs {
+
+.dog .legs {
     position: absolute;
     bottom: 0;
     left: -10%;
@@ -210,114 +242,76 @@
     background: #F7AA2B;
     border-radius: 10px 10px 0 0;
 }
-.member-form .dog .legs::before, .dog .legs::after {
+
+.dog .legs::before,
+.dog .legs::after {
     content: "";
     position: absolute;
     bottom: 1px;
     background: #CB7A1D;
     z-index: -1;
 }
-.member-form .dog .legs::before {
+
+.dog .legs::before {
     left: -7.5%;
     width: 115%;
     height: 55%;
     border-radius: 5px 5px 0 0;
 }
-.member-form .dog .legs::after {
+
+.dog .legs::after {
     left: -3.5%;
     width: 107%;
     height: 250%;
     border-radius: 20px 20px 35px 35px;
 }
-/* good */
-.member-form .card.good .face::before {
+
+
+.card.good .face::before {
     margin-top: 10px;
 }
-.member-form .card.good .face::after{
+.card.good .face::after{
     height: 85px;
 }
-.member-form .card.good .eyes {
+.card.good .eyes {
     top: 13%;
 }
-.member-form .card.good .eyes::before,
-.member-form .card.good .eyes::after {
+.card.good .eyes::before, 
+.card.good .eyes::after {
     width: 18px;
     height: 5px;
     margin: 0px 12.5%;
     transform: rotate(-37.5deg);
     border-radius: 20px;
 }
-.member-form .card.good .eyes::after {
+.card.good .eyes::after {
     transform: rotate(37.5deg);
 }
-.member-form .card.good .nose {
+.card.good .nose {
     top: 18%;
 }
-.member-form .card.good .mouth {
+.card.good .mouth {
     top: 16.5%;
 }
-.member-form .card.good .tongue::before {
+.card.good .tongue::before {
     height: 12px;
 }
-.member-form .card.good .tongue::after {
+.card.good .tongue::after {
     height: 24px;
     animation: movetongue 0.1s linear 0.35s infinite alternate forwards;
 }
-.member-form .card.good .chin {
+.card.good .chin {
     top: 34%;
 }
-.member-form .card.good .tail {
+.card.good .tail {
     animation: movetail 0.1s linear infinite alternate forwards;
 }
-/* bad */
-.member-form .card.bad .ears::before {
-    transform: rotate(-50deg) translate(-7px, 2px);
-}
-.member-form .card.bad .ears::after {
-    transform: rotate(50deg) translate(7px, 2px);
-}
-.member-form .card.bad .face::before {
-    margin-top: 28px;
-}
-.member-form .card.bad .face::after {
-    height: 55px;
-}
-.member-form .card.bad .eyes {
-    top: 38%;
-}
-.member-form .card.bad .eyes::before, 
-.member-form .card.bad .eyes::after {
-    width: 18px;
-    height: 5px;
-    margin: 0px 14.5%;
-    transform: rotate(-37.5deg);
-    border-radius: 20px;
-}
-.member-form .card.bad .eyes::after {
-    transform: rotate(37.5deg);
-}
-.member-form .card.bad .teardrop {
-    animation: cry 0.1s ease-in 0.25s forwards;
-}
-.member-form .card.bad .nose {
-    top: 44%;
-}
-.member-form .card.bad .mouth {
-    top: 42%;
-}
-.member-form .card.bad .chin {
-    top: 52%;
-}
-.member-form .card.bad .tail {
-    transform: rotate(0);
-}
+
 @keyframes movetongue {
     100% {height: 27px;}
 }
+
 @keyframes movetail {
     0% {transform: rotate(37deg);}
     100% {transform: rotate(52deg);}
-}
-@keyframes cry {
-    100% {visibility: visible;}
 }
