--- a/vefy/assets/css/login_id.css
+++ b/vefy/assets/css/login_id.css
@@ -8,60 +8,63 @@
 }
 
 .id_find {
+    padding: 20px 70px;
     font-size: 20px;
-    color: #366221;
-    border-top: 4px solid #366221;
-    border-left: 4px solid #366221;
-    border-right: 4px solid #366221;
-    padding: 20px 96px;
+    border-top: 2px solid #c0bebebd;
+    border-left: 2px solid #c0bebebd;
+    border-right: 2px solid #c0bebebd;
 }
-
+.id_find a {
+    color: #000000;
+}
 .pass_find {
     font-size: 20px;
-    color: #c2c2c2;
-    border-top: 4px solid #c0bebebd;
-    border-right: 4px solid #c0bebebd;
-    border-bottom: 4px solid #366221;
-    padding: 17px 87px;
-}
 
+    border-top: 2px solid #c0bebebd;
+    border-bottom: 2px solid #c0bebebd;
+    border-right: 2px solid #c0bebebd;
+    padding: 20px 70px;
+}
 .pass_find a {
-    color: #999999;
+    color: #0000002a !important;
 }
 
-#youName {
+#youID {
     border: 1px solid #cccccc;
     width: 580px;
     height: 60px;
-    margin-top: 40px;
+    margin: 0 auto;
+    margin-top: 30px;
     text-align: left;
 }
-
 #youPhone {
-    border: 1px solid #cccccc;
-    width: 580px;
-    height: 60px;
-    margin-top: 40px;
-    text-align: left;
-
+    margin: 30px 0;
 }
-
+.btn_submit2 {
+    background-color: #b1c5b3;
+    text-align: center;
+    padding: 17px;
+    border-radius: 10px;
+    color: #fff;
+    font-weight: bold;
+    width: 513.33px;
+    border: 0;
+    cursor: pointer;
+}
 .find_desc {
     font-size: 15px;
     line-height: 1.47;
     margin: 10px 0 200px 0;
 }
-
-#loginBtn {
-    font-size: 20px;
-    padding: 17px 272px;
-    color: #fff;
-    background-color: #4d942c;
-    margin-top: 40px;
-    border-radius: 10px;
-    cursor: pointer;
-    font-weight: bold;
-}
 fieldset {
     border: none;
+}
+.input_write {
+    border: 1px solid #cccccc;
+    width: 509px;
+    height: 60px;
+    margin: 0 auto;
+    margin-top: 40px;
+    text-align: left;
+    padding-left: 15px;
 }
