--- a/vefy/assets/css/login_pass.css
+++ b/vefy/assets/css/login_pass.css
@@ -8,52 +8,55 @@
 }
 
 .id_find {
-    padding: 20px 96px;
+    padding: 20px 70px;
     font-size: 20px;
-    border-top: 4px solid #c0bebebd;
-    border-left: 4px solid #c0bebebd;
-    border-bottom: 4px solid #366221;
+    border-top: 2px solid #c0bebebd;
+    border-left: 2px solid #c0bebebd;
+    border-bottom: 2px solid #c0bebebd;
 }
 .id_find a {
     color: #c2c2c2;
 }
 .pass_find {
     font-size: 20px;
-    color: #366221;
-    border-top: 4px solid #366221;
-    border-left: 4px solid #366221;
-    border-right: 4px solid #366221;
-    padding: 17px 87px;
+    color: #000000bd;
+    border-top: 2px solid #c0bebebd;
+    border-left: 2px solid #c0bebebd;
+    border-right: 2px solid #c0bebebd;
+    padding: 20px 70px;
 }
 
 #youID {
     border: 1px solid #cccccc;
-    width: 580px;
+    width: 509px;
     height: 60px;
     margin: 0 auto;
     margin-top: 40px;
     text-align: left;
+    padding-left: 15px;
 }
 
 #youPhone {
     border: 1px solid #cccccc;
-    width: 580px;
+    width: 509px;
     height: 60px;
     margin: 0 auto;
-    margin-top: 40px;
+    margin-top: 30px;
     text-align: left;
+    padding-left: 15px;
 }
 
-.btn_submit {
-    display: inline-block;
-    font-size: 20px;
-    padding: 17px 272px;
-    color: #fff;
-    background-color: #4d942c;
-    margin-top: 40px;
+.btn_submit2 {
+    background-color: #b1c5b3;
+    text-align: center;
+    padding: 17px;
     border-radius: 10px;
-    cursor: pointer;
+    color: #fff;
     font-weight: bold;
+    width: 513.33px;
+    border: 0;
+    cursor: pointer;
+    margin-top: 30px;
 }
 .find_desc {
     font-size: 15px;
