--- a/vefy/assets/css/map.css
+++ b/vefy/assets/css/map.css
@@ -119,7 +119,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 24px;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #0000003b;
 }
 #menu_wrap .text {
     flex: 0 0 40%;
@@ -271,11 +271,15 @@ input {
     margin-right: 20px;
     padding: 10px 15px 5px 15px;
     color: #c77f5d;
+    cursor: pointer;
 }
 .restaurant .restaurantList > span.active {
     color: #fff;
     background: #c77f5d;
     border: 2px solid #c77f5d;;
+}
+.restaurantLocation {
+    display: none;
 }
 .restaurantLocationWrap {
     display: flex;
