--- a/vefy/assets/css/normal/common.css
+++ b/vefy/assets/css/normal/common.css
@@ -57,7 +57,7 @@ fieldset {
 }
 #header h1 a {
     padding: 10px;
-    margin: 20px;
+    margin: 10px;
     color: #fff;
     line-height: 90px;
 }
@@ -66,19 +66,19 @@ fieldset {
     margin-top: 35px;
 }
 #header nav {
-    width: 44%;
+    width: 47%;
 }
 #header nav a {
     display: inline-block;
-    font-size: 17px;
+    font-size: 15px;
     color: #394234;
-    padding: 0 40px 0 0 !important;
+    padding: 0 30px 0 0 !important;
 }
 #header nav a:last-child {
     padding: 0 !important;
 }
 #header nav a:first-child {
-    margin-left: 65px;
+    margin-left: 30px;
 }
 /* #header nav a:hover span {
     color: #586352;
@@ -92,15 +92,14 @@ fieldset {
     display: inline-block;
     transition: background 0.3s, color 0.3s;
     color: #394234;
-    margin: 5px;
-    font-size: 17px;
-    padding: 0 40px 0 0;
+    /* margin: 5px; */
+    font-size: 15px;
+    padding: 0 30px 0 0;
 }
 #header .member a:hover {
     color: #fff;
 }
 #header .member a:last-child {
-    margin-right: 30px;
 }
 
 /* footer */
